# io-module-host

./: CMakeLists.txt  LICENSE  README.md
include/iomh/: crc.hpp  frame_parser.hpp  host.hpp  protocol.hpp  serial_link.hpp  simulated_link.hpp  simulator.hpp
src/: frame_parser.cpp  host.cpp  main.cpp  simulator.cpp
unit_tests/: test_crc.cpp  test_parser.cpp
